--- a/config.toml
+++ b/config.toml
@@ -1,18 +1,31 @@
-title = "Codex"
-baseURL = "https://example.com"
 languageCode = "en-us"
+title = "Auggie Heschmeyer"
+baseURL = "https://auggieheschmeyer.com/"
+copyright = "© Auggie Heschmeyer {year}"
 
 # This is just to get the exampleSite to work with the theme 
 # in this repository. Don't mimic this. When using the theme
 # you should place it in themes/codex and list theme = "codex"
 theme = "hugo-theme-codex"
 
+[[menu.main]]
+  identifier = "about"
+  name = "about"
+  title = "about"
+  url = "/"
 
+[[menu.main]]
+  identifier = "blog"
+  name = "blog"
+  title = "Blog"
+  url = "/blog"
+
+preserveTaxonomyNames = true
+
+[taxonomies]
+  tag = "tags"
 
 [params]
-  # This will show the twitter icon which will link to twitter.com/your-twitter-handle
-  # You can omit the @ symbol
-  twitter = "your-twitter-handle"
-  # This will show the github icon which will link to github.com/your-github-handle
-  # You can omit the @ symbol
-  github = "your-github-handle"
+  instagram = "realauggieheschmeyer"
+  twitter = "realauggiehesch"
+  github = "realauggieheschmeyer"
