Getting repo ready for build

--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ preserveTaxonomyNames = true
   tag = "tags"
 
 [params]
-  linkedin = "auggieheschmeyer"
+  linkedin = "realauggieheschmeyer"
   twitter = "realauggiehesch"
   github = "realauggieheschmeyer"
 
